--- a/Dev-Blog/Dev-Blog/Dev-Blog.csproj
+++ b/Dev-Blog/Dev-Blog/Dev-Blog.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.6.0" />
 		<PackageReference Include="Azure.Storage.Common" Version="12.5.2" />
+		<PackageReference Include="Dropbox.Api" Version="5.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
