--- a/Dev-Blog/Dev-Blog/Dev-Blog.csproj
+++ b/Dev-Blog/Dev-Blog/Dev-Blog.csproj
@@ -27,12 +27,13 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+		<PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
 		<PackageReference Include="MySql.Data.Entity" Version="6.10.9" />
 		<PackageReference Include="MySqlConnector" Version="0.69.9" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Controllers\" />
+	  <Folder Include="Controllers\" />
 	</ItemGroup>
 </Project>
