--- a/Dev-Blog/Dev-Blog/Dev-Blog.csproj
+++ b/Dev-Blog/Dev-Blog/Dev-Blog.csproj
@@ -30,6 +30,7 @@
 		<PackageReference Include="MySql.Data.Entity" Version="6.10.9" />
 		<PackageReference Include="MySqlConnector" Version="0.69.9" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.2" />
+		<PackageReference Include="SendGrid" Version="9.21.0" />
 	</ItemGroup>
 
 	<ItemGroup>
