--- a/Dev-Blog/Dev-Blog/Dev-Blog.csproj
+++ b/Dev-Blog/Dev-Blog/Dev-Blog.csproj
@@ -33,6 +33,7 @@
 		<PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
 		<PackageReference Include="MySql.Data.Entity" Version="6.10.9" />
 		<PackageReference Include="MySqlConnector" Version="0.69.9" />
+		<PackageReference Include="PagedList.Mvc" Version="4.5.0" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.2" />
 		<PackageReference Include="SendGrid" Version="9.21.0" />
 	</ItemGroup>
