--- a/Dev-Blog/Dev-Blog/Dev-Blog.csproj
+++ b/Dev-Blog/Dev-Blog/Dev-Blog.csproj
@@ -31,6 +31,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
 		<PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
+		<PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="3.2.11" />
 		<PackageReference Include="MySql.Data.Entity" Version="6.10.9" />
 		<PackageReference Include="MySqlConnector" Version="0.69.9" />
 		<PackageReference Include="PagedList.Mvc" Version="4.5.0" />
