--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,14 +19,14 @@ jobs:
       with:
         dotnet-version: ${{ env.NETCORE_VERSION }}
 
-    - name: Restore
-      run: dotnet restore
+    # name: Restore
+    #  run: dotnet restore
 
-    - name: Build
-      run: dotnet build --no-restore -c Release
+    #- name: Build
+    #  run: dotnet build --no-restore -c Release
 
     - name: Publish
-      run: dotnet publish --configuration Release --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      run: dotnet publish --configuration Release --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
     - name: 'Deploy to Azure'
       uses: azure/webapps-deploy@v2
