--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 env:
   AZURE_WEBAPP_NAME: thedevblog
-  AZURE_WEBAPP_PACKAGE_PATH: '../../Dev-Blog/Dev-Blog'
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
   NETCORE_VERSION: '3.1.402'
 
 jobs:
