--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,16 +19,16 @@ jobs:
       with:
         dotnet-version: ${{ env.NETCORE_VERSION }}
 
-    # name: Restore
-    #  run: dotnet restore
+     name: Restore
+      run: dotnet restore
 
-    #- name: Build
-    #  run: dotnet build --no-restore -c Release
+    - name: Build
+      run: dotnet build --no-restore -c Release
 
     - name: Publish
       run: |
         dotnet build --configuration release
-        dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Dev-Blog/Dev-Blog'
+        dotnet publish --no-build -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Dev-Blog/Dev-Blog'
 
     - name: 'Deploy to Azure'
       uses: azure/webapps-deploy@v2
