--- a/Dev-Blog/.github/workflows/build-and-deploy.yml
+++ b/Dev-Blog/.github/workflows/build-and-deploy.yml
@@ -26,9 +26,7 @@ jobs:
       run: dotnet build --no-restore -c Release
 
     - name: Publish
-      run: |
-        dotnet build --configuration release
-        dotnet publish --no-build -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Dev-Blog'
+      run: dotnet publish --no-build -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Dev-Blog'
 
     - name: 'Deploy to Azure'
       uses: azure/webapps-deploy@v2
