change version number

--- a/.github/workflows/DeployToAzure.yml
+++ b/.github/workflows/DeployToAzure.yml
@@ -13,14 +13,14 @@ env:
 jobs:
   build:
     name: Deploy to Azure
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core SDK 5.0.100
+    - name: Setup .NET Core SDK 3.1.402
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.100
+        dotnet-version: 3.1.402
     - name: Install dependencies
       run: dotnet restore
 
