--- a/Dev-Blog/Dev-Blog/Dev-Blog.csproj
+++ b/Dev-Blog/Dev-Blog/Dev-Blog.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Cors" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.2" />
 		<PackageReference Include="Microsoft.Azure.Storage.Common" Version="11.2.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
