--- a/.github/workflows/master_thedevblog.yml
+++ b/.github/workflows/master_thedevblog.yml
@@ -21,10 +21,12 @@ jobs:
         dotnet-version: '3.1.102'
 
     - name: Build with dotnet
+      working-directory: 'Dev-Blog/Dev-Blog'
       run: dotnet build --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      working-directory: 'Dev-Blog/Dev-Blog'
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/Dev-Blog
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -32,4 +34,4 @@ jobs:
         app-name: 'thedevblog'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_a27835ee2e1b44158e18d43945373a3b }}
-        package: ${{env.DOTNET_ROOT}}/myapp 
+        package: ${{env.DOTNET_ROOT}}/Dev-Blog 
