--- a/Dev-Blog/DataLibrary/DataLibrary.csproj
+++ b/Dev-Blog/DataLibrary/DataLibrary.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Dropbox.Api" Version="6.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.23" />
   </ItemGroup>
 
