--- a/Dev-Blog/BlazorServer/BlazorServer.csproj
+++ b/Dev-Blog/BlazorServer/BlazorServer.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="SendGrid" Version="9.22.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
