--- a/Dev-Blog/DevBlog_BlazorServer/DevBlog_BlazorServer.csproj
+++ b/Dev-Blog/DevBlog_BlazorServer/DevBlog_BlazorServer.csproj
@@ -19,4 +19,8 @@
 		<PackageReference Include="Identity.Dapper.MySQL" Version="0.9.5-alpha" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\DataLibrary\DataLibrary.csproj" />
+	</ItemGroup>
 </Project>
