--- a/Dev-Blog/BlazorServer/BlazorServer.csproj
+++ b/Dev-Blog/BlazorServer/BlazorServer.csproj
@@ -21,8 +21,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    <PackageReference Include="MySqlConnector" Version="1.2.1" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Json.Microsoft" Version="5.0.0-alpha.1" />
+    <PackageReference Include="MySqlConnector" Version="1.3.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Json.Microsoft" Version="3.2.4" />
     <PackageReference Include="Radzen.Blazor" Version="3.1.3" />
     <PackageReference Include="SendGrid" Version="9.22.0" />
   </ItemGroup>
