Update yaml file

--- a/.github/workflows/master_thedevblog.yml
+++ b/.github/workflows/master_thedevblog.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Clean
       run: dotnet clean ./Dev-Blog/Dev-Blog.sln --configuration Release && dotnet nuget locals all --clear
 
+    - name: Restore Packages
+      run: nuget restore ./Dev-Blog/Dev-Blog.sln
+
     - name: Build with dotnet
       working-directory: 'Dev-Blog/BlazorServer'
       run: dotnet build --configuration Release
