--- a/Dev_Blog/Dev_Blog/Dev_Blog.csproj
+++ b/Dev_Blog/Dev_Blog/Dev_Blog.csproj
@@ -6,6 +6,14 @@
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <Optimize>False</Optimize>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <Optimize>False</Optimize>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Blazored.Modal" Version="6.0.1" />
 		<PackageReference Include="Dropbox.Api" Version="6.22.0" />
