--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "run-script-os": "^1.1.6",
     "typescript": "^4.7.4"
   },
   "overrides": {
