--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -8,6 +8,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "json-server": "^0.17.1",
+    "jwt-decode": "^3.1.2",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
