--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fluentui/react": "^8.105.11",
     "bootstrap": "^5.2.0",
+    "enzyme": "^3.11.0",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "json-server": "^0.17.1",
@@ -34,6 +35,9 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/enzyme": "^3.10.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "ajv": "^8.11.0",
@@ -45,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "react-test-renderer": "^18.2.0",
     "run-script-os": "^1.1.6",
     "typescript": "^4.7.4"
   },
