--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -14,6 +14,7 @@
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
@@ -36,8 +37,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "ajv": "^8.11.0",
