--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fluentui/react": "^8.105.11",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "bootstrap": "^5.2.0",
     "enzyme": "^3.11.0",
     "http-proxy-middleware": "^2.0.6",
@@ -15,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
