--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0"
+  },
+  "dependencies": {
+    "react-markdown": "^8.0.7"
   }
 }
