--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -23,6 +23,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-markdown": "^8.0.7",
     "reactstrap": "^9.1.3",
     "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4",
