--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.0"
-  },
-  "dependencies": {
+    "@types/jest": "^29.5.0",
     "react-markdown": "^8.0.7"
   }
 }
