Add caraousel for images

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
-    "react-markdown": "^8.0.7"
+    "react-markdown": "^8.0.7",
+    "react-responsive-carousel": "^3.2.23"
   }
 }
