--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -20,10 +20,11 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
-    "react-markdown": "^8.0.7",
     "reactstrap": "^9.1.3",
     "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4",
