--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -7,7 +7,7 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: devblog
-  CLIENT_APP_DIRECTORY: devblog\devblog\ClientApp\boobaleedoo
+  CLIENT_APP_DIRECTORY: devblog\devblog\ClientApp\
 jobs:
   build:
     runs-on: windows-latest
@@ -23,5 +23,5 @@ jobs:
       #   run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
       # - name: Test
       #   run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
-      - name: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" run build
-        run: npm run build
+      - name: npm run build
+        run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" run build
