--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+      - name: npm ci
+        run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" ci
       - name: npm run build
         run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" run build
