--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,7 +31,37 @@ jobs:
       #   run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" ci
       # - name: npm install
       #   run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" install
-      - name: npm install
-        run: npm --prefix ${{ env.CLIENT_APP_DIRECTORY }} install
-      - name: npm run build
-        run: npm --prefix ${{ env.CLIENT_APP_DIRECTORY }} run build
+      # - name: npm install
+      #   run: npm --prefix ${{ env.CLIENT_APP_DIRECTORY }} install
+      # - name: npm run build
+      #   run: npm --prefix ${{ env.CLIENT_APP_DIRECTORY }} run build
+
+      # - uses: actions/checkout@v3
+      # - name: Setup .NET SDK
+      #   uses: actions/setup-dotnet@v3
+      #   with:
+      #     dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+      # - name: Restore
+      #   run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+      # - name: Dotnet Build
+      #   run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+      # - name: Test
+      #   run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+      # - name: Use Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: ${{ matrix.node-version }}
+      # - name: npm ci
+      #   run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" ci
+      # - name: npm install
+      #   run: npm --prefix "${{ env.CLIENT_APP_DIRECTORY }}" install
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install and Build Client App
+        run: |
+          cd ${{ env.CLIENT_APP_DIRECTORY }}
+          npm install
+          npm run build
