--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -61,7 +61,4 @@ jobs:
           node-version: 16
 
       - name: Install and Build Client App
-        run: |
-          cd ${{ env.CLIENT_APP_DIRECTORY }}
-          npm install
-          npm run build
+        run: ls
