--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -7,7 +7,7 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: devblog
-  CLIENT_APP_DIRECTORY: ClientApp
+  CLIENT_APP_DIRECTORY: devblog\ClientApp
 jobs:
   build:
     runs-on: windows-latest
@@ -61,4 +61,7 @@ jobs:
           node-version: 16
 
       - name: Install and Build Client App
-        run: ls
+        run: |
+          cd ${{ env.CLIENT_APP_DIRECTORY }}
+          npm install
+          npm run build
