--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -7,7 +7,7 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: devblog
-  CLIENT_APP_DIRECTORY: devblog\ClientApp
+  CLIENT_APP_DIRECTORY: ..\devblog\ClientApp
 jobs:
   build:
     runs-on: windows-latest
