--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -27,14 +27,15 @@ jobs:
       - name: Check Working Directory Contents
         run: |
           ls -R ${{ env.WORKING_DIRECTORY }}
+          pwd
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
+      # - name: Setup Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: 16
 
-      - name: Install and Build Client App
-        run: |
-          cd ${{ env.CLIENT_APP_DIRECTORY }}
-          npm install
-          npm run build
+      # - name: Install and Build Client App
+      #   run: |
+      #     cd ${{ env.CLIENT_APP_DIRECTORY }}
+      #     npm install
+      #     npm run build
