--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Check Working Directory Contents
         run: |
-          ls -R
+          dir
           pwd
 
       # - name: Setup Node.js
