--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,41 +1,41 @@
-# name: Build And Test
-# on:
-#   push:
-#     branches:
-#       - "*"
-# env:
-#   CONFIGURATION: Release
-#   DOTNET_CORE_VERSION: 7.0.x
-#   WORKING_DIRECTORY: devblog
-#   CLIENT_APP_DIRECTORY: devblog\devblog\ClientApp
-# jobs:
-#   build:
-#     runs-on: windows-latest
-#     steps:
-# - uses: actions/checkout@v3
-# - name: Setup .NET SDK
-#   uses: actions/setup-dotnet@v3
-#   with:
-#     dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-# - name: Restore
-#   run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
-# - name: Dotnet Build
-#   run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-# - name: Test
-#   run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+name: Build And Test
+on:
+  push:
+    branches:
+      - "*"
+env:
+  CONFIGURATION: Release
+  DOTNET_CORE_VERSION: 7.0.x
+  WORKING_DIRECTORY: devblog
+  CLIENT_APP_DIRECTORY: devblog\devblog\ClientApp
+jobs:
+  build:
+    runs-on: windows-latest
+    steps:
+      # - uses: actions/checkout@v3
+      # - name: Setup .NET SDK
+      #   uses: actions/setup-dotnet@v3
+      #   with:
+      #     dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+      # - name: Restore
+      #   run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+      # - name: Dotnet Build
+      #   run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+      # - name: Test
+      #   run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
 
-# - name: Check Working Directory Contents
-#   run: |
-#     dir
-#     pwd
+      # - name: Check Working Directory Contents
+      #   run: |
+      #     dir
+      #     pwd
 
-# - name: Setup Node.js
-#   uses: actions/setup-node@v2
-#   with:
-#     node-version: 16
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.x
 
-# - name: Install and Build Client App
-#   run: |
-#     cd ..\devblog\devblog\ClientApp
-#     npm install
-#     npm run build
+      - name: Install and Build Client App
+        run: |
+          cd ..\devblog\devblog\ClientApp
+          npm install
+          npm run build
