--- a/devblog/devblog/appsettings.json
+++ b/devblog/devblog/appsettings.json
@@ -1,10 +1,11 @@
 {
+  "https_port": 443,
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
 "AllowedHosts": "*"
 }
