--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -50,7 +50,7 @@ jobs:
               run: | 
                 ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
                 cd ${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/../; \
-                docker container rm -f ${{ secrets.DEVBLOG_STAGING_CONTAINER_NAME }}; \
+                docker container rm -f andrewtest.org_client; \
                 docker compose up -d;
                 
 
